// Original file: src/data/proto/payment.proto

import type { PaymentStructureDTO as _PaymentProto_PaymentStructureDTO, PaymentStructureDTO__Output as _PaymentProto_PaymentStructureDTO__Output } from '../PaymentProto/PaymentStructureDTO';

export interface AllPaymentsResponseDTO {
  'payments'?: (_PaymentProto_PaymentStructureDTO)[];
}

export interface AllPaymentsResponseDTO__Output {
  'payments'?: (_PaymentProto_PaymentStructureDTO__Output)[];
}
