// Original file: src/data/proto/payment.proto


export interface PaymentResponseDTO {
  'email'?: (string);
  'password'?: (string);
  'firstName'?: (string);
  'lastName'?: (string);
  'age'?: (number);
  'amount'?: (number);
}

export interface PaymentResponseDTO__Output {
  'email'?: (string);
  'password'?: (string);
  'firstName'?: (string);
  'lastName'?: (string);
  'age'?: (number);
  'amount'?: (number);
}
